--- a/roro.html
+++ b/roro.html
@@ -84,8 +84,8 @@
                 <input type="checkbox" name="product" value="Chocolate Cake - R120.00"> Select
             </div>
             <div class="product">
-                <img src="cupcake1.jpg" alt="Vanilla Cupcake">
-                <h2>Vanilla Cupcake</h2>
+                <img src="cake2.jpg" alt="Vanilla Cupcake">
+                <h2>cake</h2>
                 <p>R15.00 each</p>
                 <input type="checkbox" name="product" value="Vanilla Cupcake - R15.00"> Select
             </div>
@@ -96,55 +96,55 @@
                 <input type="checkbox" name="product" value="Strawberry Pastry - R25.00"> Select
             </div>
             <div class="product">
-                <img src="cake2.jpg" alt="Red Velvet Cake">
+                <img src="cake3.jpg" alt="Red Velvet Cake">
                 <h2>Red Velvet Cake</h2>
                 <p>R150.00</p>
                 <input type="checkbox" name="product" value="Red Velvet Cake - R150.00"> Select
             </div>
             <div class="product">
-                <img src="cupcake2.jpg" alt="Chocolate Cupcake">
+                <img src="cake4.jpg" alt="Chocolate Cupcake">
                 <h2>Chocolate Cupcake</h2>
                 <p>R15.00 each</p>
                 <input type="checkbox" name="product" value="Chocolate Cupcake - R15.00"> Select
             </div>
             <div class="product">
-                <img src="pastry2.jpg" alt="Cream Puff">
+                <img src="cake5.jpg" alt="Cream Puff">
                 <h2>Cream Puff</h2>
                 <p>R20.00</p>
                 <input type="checkbox" name="product" value="Cream Puff - R20.00"> Select
             </div>
             <div class="product">
-                <img src="cake3.jpg" alt="Cheesecake">
+                <img src="cake6.jpg" alt="Cheesecake">
                 <h2>Cheesecake</h2>
                 <p>R130.00</p>
                 <input type="checkbox" name="product" value="Cheesecake - R130.00"> Select
             </div>
             <div class="product">
-                <img src="cupcake3.jpg" alt="Red Velvet Cupcake">
+                <img src="cake7.jpg" alt="Red Velvet Cupcake">
                 <h2>Red Velvet Cupcake</h2>
                 <p>R18.00 each</p>
                 <input type="checkbox" name="product" value="Red Velvet Cupcake - R18.00"> Select
             </div>
             <div class="product">
-                <img src="pastry3.jpg" alt="Cinnamon Roll">
+                <img src="cake8.jpg" alt="Cinnamon Roll">
                 <h2>Cinnamon Roll</h2>
                 <p>R22.00</p>
                 <input type="checkbox" name="product" value="Cinnamon Roll - R22.00"> Select
             </div>
             <div class="product">
-                <img src="cake4.jpg" alt="Lemon Cake">
+                <img src="cake9.jpg" alt="Lemon Cake">
                 <h2>Lemon Cake</h2>
                 <p>R110.00</p>
                 <input type="checkbox" name="product" value="Lemon Cake - R110.00"> Select
             </div>
             <div class="product">
-                <img src="cupcake4.jpg" alt="Strawberry Cupcake">
+                <img src="cake10.jpg" alt="Strawberry Cupcake">
                 <h2>Strawberry Cupcake</h2>
                 <p>R17.00 each</p>
                 <input type="checkbox" name="product" value="Strawberry Cupcake - R17.00"> Select
             </div>
             <div class="product">
-                <img src="pastry4.jpg" alt="Eclair">
+                <img src="cake11.jpg" alt="Eclair">
                 <h2>Eclair</h2>
                 <p>R28.00</p>
                 <input type="checkbox" name="product" value="Eclair - R28.00"> Select
