--- a/roro.html
+++ b/roro.html
@@ -118,13 +118,55 @@
                 <input type="checkbox" name="product" value="Vanilla Cupcake - R15.00"> Select
             </div>
             <div class="product">
-                <img src="pastry1.jpg" alt="Strawberry Pastry">
+                <img src="cake3.jpg" alt="Strawberry Pastry">
                 <h2>Strawberry Pastry</h2>
                 <p>R25.00</p>
                 <input type="checkbox" name="product" value="Strawberry Pastry - R25.00"> Select
             </div>
             <div class="product">
-                <img src="cake3.jpg" alt="Red Velvet Cake">
+                <img src="cake4.jpg" alt="Red Velvet Cake">
+                <h2>Red Velvet Cake</h2>
+                <p>R150.00</p>
+                <input type="checkbox" name="product" value="Red Velvet Cake - R150.00"> Select
+            </div>
+            <div class="product">
+                <img src="cake5.jpg" alt="Red Velvet Cake">
+                <h2>Red Velvet Cake</h2>
+                <p>R150.00</p>
+                <input type="checkbox" name="product" value="Red Velvet Cake - R150.00"> Select
+            </div>
+            <div class="product">
+                <img src="cake6.jpg" alt="Red Velvet Cake">
+                <h2>Red Velvet Cake</h2>
+                <p>R150.00</p>
+                <input type="checkbox" name="product" value="Red Velvet Cake - R150.00"> Select
+            </div>
+            <div class="product">
+                <img src="cake7.jpg" alt="Red Velvet Cake">
+                <h2>Red Velvet Cake</h2>
+                <p>R150.00</p>
+                <input type="checkbox" name="product" value="Red Velvet Cake - R150.00"> Select
+            </div>
+             <div class="product">
+                <img src="cake8.jpg" alt="Red Velvet Cake">
+                <h2>Red Velvet Cake</h2>
+                <p>R150.00</p>
+                <input type="checkbox" name="product" value="Red Velvet Cake - R150.00"> Select
+             </div>
+            <div class="product">
+                <img src="cake9.jpg" alt="Red Velvet Cake">
+                <h2>Red Velvet Cake</h2>
+                <p>R150.00</p>
+                <input type="checkbox" name="product" value="Red Velvet Cake - R150.00"> Select
+            </div>
+            <div class="product">
+                <img src="cake10.jpg" alt="Red Velvet Cake">
+                <h2>Red Velvet Cake</h2>
+                <p>R150.00</p>
+                <input type="checkbox" name="product" value="Red Velvet Cake - R150.00"> Select
+            </div>
+            <div class="product">
+                <img src="cake11.jpg" alt="Red Velvet Cake">
                 <h2>Red Velvet Cake</h2>
                 <p>R150.00</p>
                 <input type="checkbox" name="product" value="Red Velvet Cake - R150.00"> Select
