--- a/index.html
+++ b/index.html
@@ -3,141 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bakes By RORO</title>
+    <title>Flour to Cake Animation</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            text-align: center;
             margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
             overflow: hidden;
-        }
-        h1 {
-            margin: 20px 0;
-            color: #333;
-        }
-        .loading-bar-container {
-            width: 80%;
-            background-color: #e0e0e0;
-            border-radius: 5px;
-            overflow: hidden;
-            margin: 20px auto;
-            height: 10px;
-        }
-        .loading-bar {
-            width: 0;
-            height: 100%;
-            background-color: #ff6347;
-            animation: loading 3s linear forwards;
-        }
-        @keyframes loading {
-            0% { width: 0; }
-            100% { width: 100%; }
+            background-color: pink;
+            height: 100vh;
+            position: relative;
         }
 
-        /* Animation for white and pink splashing */
-        .color-splash {
+        .falling-dot {
             position: absolute;
-            width: 50%;
-            height: 100%;
-            top: 0;
-            animation-duration: 2s;
-            animation-timing-function: ease-in-out;
-        }
-        .white {
-            left: -50%;
+            width: 5px;
+            height: 5px;
             background-color: white;
-            animation-name: moveWhite;
-        }
-        .pink {
-            right: -50%;
-            background-color: #ff005a;
-            animation-name: movePink;
-        }
-        @keyframes moveWhite {
-            0% { left: -50%; }
-            100% { left: 0; }
-        }
-        @keyframes movePink {
-            0% { right: -50%; }
-            100% { right: 0; }
-        }
-
-        /* Dots after splash */
-        .dots {
-            position: absolute;
-            width: 10px;
-            height: 10px;
             border-radius: 50%;
-            opacity: 0;
-            animation: fadeInDots 1s forwards;
+            animation: fall 3s infinite;
         }
-        .white-dots {
-            background-color: white;
-        }
-        .pink-dots {
-            background-color: #ff005a;
-        }
-        @keyframes fadeInDots {
-            0% { opacity: 0; }
-            100% { opacity: 1; }
-        }
-    </style>
-    <script>
-        // Function to create dots
-        function createDots() {
-            const dotCount = 50; // Number of dots
-            const container = document.body;
 
-            for (let i = 0; i < dotCount; i++) {
-                // White dots on pink side
-                let whiteDot = document.createElement('div');
-                whiteDot.classList.add('dots', 'white-dots');
-                whiteDot.style.left = `${Math.random() * 50}%`;
-                whiteDot.style.top = `${Math.random() * 100}%`;
-                whiteDot.style.animationDelay = `${Math.random() * 1}s`;
-                container.appendChild(whiteDot);
-
-                // Pink dots on white side
-                let pinkDot = document.createElement('div');
-                pinkDot.classList.add('dots', 'pink-dots');
-                pinkDot.style.left = `${50 + Math.random() * 50}%`;
-                pinkDot.style.top = `${Math.random() * 100}%`;
-                pinkDot.style.animationDelay = `${Math.random() * 1}s`;
-                container.appendChild(pinkDot);
+        @keyframes fall {
+            0% {
+                transform: translateY(-10px);
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(calc(100vh - 20px));
+                opacity: 0;
             }
         }
 
-        // Animate white and pink splashing
-        window.onload = function() {
-            // Create white and pink elements
-            let white = document.createElement('div');
-            white.classList.add('color-splash', 'white');
-            document.body.appendChild(white);
+        .cake-icon {
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            background-image: url('cake.png'); /* Replace with your cake image */
+            background-size: cover;
+            animation: cake-fall 3s infinite;
+            display: none;
+        }
 
-            let pink = document.createElement('div');
-            pink.classList.add('color-splash', 'pink');
-            document.body.appendChild(pink);
+        @keyframes cake-fall {
+            0% {
+                transform: translateY(-10px);
+            }
+            100% {
+                transform: translateY(calc(100vh - 10px));
+            }
+        }
 
-            // After splash, create dots
-            setTimeout(() => {
-                white.remove();
-                pink.remove();
-                createDots();
-            }, 2000); // 2 seconds to match splash animation
-
-            // Redirect to roro.html after the animation
-            setTimeout(() => {
-                window.location.href = "roro.html";
-            }, 7000); // 7 seconds total
-        };
-    </script>
+        .link {
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 20px;
+            color: white;
+            text-decoration: none;
+            font-family: Arial, sans-serif;
+        }
+    </style>
 </head>
 <body>
-    <h1>Bakes By RORO</h1>
-    <div class="loading-bar-container">
-        <div class="loading-bar"></div>
-    </div>
+    <!-- Link to roro.html, but it'll redirect automatically after 7 seconds -->
+    <a href="roro.html" class="link" id="bakesByRoroLink">Bakes By Roro</a>
+
+    <script>
+        // Function to create falling dots
+        function createFallingDots() {
+            const dot = document.createElement('div');
+            dot.classList.add('falling-dot');
+            dot.style.left = `${Math.random() * window.innerWidth}px`;
+            document.body.appendChild(dot);
+
+            // Create cake icon at the dot's position
+            setTimeout(() => {
+                const cakeIcon = document.createElement('div');
+                cakeIcon.classList.add('cake-icon');
+                cakeIcon.style.left = `${dot.style.left}`; // Position the cake icon where the dot fell
+                document.body.appendChild(cakeIcon);
+
+                // Show the cake icon and animate it
+                setTimeout(() => {
+                    cakeIcon.style.display = 'block';
+                }, 1000);
+
+                // Remove dot and cake icon after animation completes
+                setTimeout(() => {
+                    dot.remove();
+                    cakeIcon.remove();
+                }, 3000);
+            }, 1000); // Delay before cake icon starts animating
+        }
+
+        // Create dots every 100 milliseconds
+        const dotsInterval = setInterval(createFallingDots, 100);
+
+        // Stop the dot creation after 7 seconds
+        setTimeout(() => {
+            clearInterval(dotsInterval);
+            // Automatically redirect to roro.html after 7 seconds
+            window.location.href = 'roro.html';
+        }, 7000); // Redirect after 7 seconds
+    </script>
 </body>
 </html>
