--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </style>
 </head>
 <body>
-    <img src="roro.png" alt="Bakes By Roro">
+    <img src="logo.png" alt="Bakes By logo">
 
     <script>
         setTimeout(function() {
