--- a/roro.html
+++ b/roro.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -98,11 +97,19 @@
             resize: vertical;
             height: 100px;
         }
+        .bot-icon {
+            position: absolute; /* Positioning it at the top right corner */
+            top: 20px;
+            right: 20px;
+        }
     </style>
 </head>
 <body>
     <header>
         <h1>Bakes By RORO</h1>
+        <a href="bot.html" class="bot-icon">
+            <img src="bot.png" alt="Chatbot" width="50" height="50"> <!-- Icon size can be adjusted -->
+        </a>
     </header>
     <form action="checkout.html" method="get">
         <div class="container">
